# web-price-scraping

./: .gitignore  README.md  pyproject.toml
src/: config.py  mailservice.py  main.py
src/amazon_price_check/: gen_web_header.py  header_config.py  logger.py  mail_service.py  main.py
src/amazon_price_check/entrypoint/: main.py
